# classic_games

./: CMakeLists.txt  README.md
src/: conf.h  game.h  main.cpp  pong.cpp  pong.h
